--- a/templates/liveView.html
+++ b/templates/liveView.html
@@ -3,128 +3,139 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Real-time speed monitoring</title>
+  <title>Real-time Speed Monitoring</title>
   <script src="https://cdn.hcharts.cn/jquery/jquery-1.8.3.min.js"></script>
   <script src="https://cdn.hcharts.cn/highstock/highstock.js"></script>
   <script src="https://cdn.hcharts.cn/highcharts/modules/exporting.js"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #d4d4d4;
-    }
-
-    select {
-      width: 200px;
-      padding: 10px;
-    }
-  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <style></style>
 </head>
 
-<body>
-  <header>
-   <!-- link to /index -->
-    <a href="/index">123</a>
-    <h1 style="text-align: center;">Real-time speed Monitoring</h1>
-    <h2 for="driverSelect">Select a Driver:</h2>
-    <select id="driverSelect">
-    </select>
-  </header>
+<body class="">
+  <div class="container-fluid bg-light text-dark p-3">
+    <header>
+      <a href="/index">Home</a>
+      <h1 style="text-align: center;">Real-time Speed Monitoring</h1>
+      <label for="selectDriver" class="form-label">Select a Driver:</label>
+      <select id="selectDriver" class="form-select">
+      </select>
+    </header>
 
-  <div>
-    <h2>Lastest record of driver:</h2>
-    <h3 id="driver_id"></h3>
-    <h3 id="car_plate"> </h3>
-    <h3 id="time"> </h3>
-    <h3 id="speed"> </h3>
-    <h3 id="overspeed"> </h3>
-  </div>
+    <div>
+      <h3>Lastest record of driver (Data and graph updates every 30 seconds):</h3>
+      <h4 id="driver_id"></h4>
+      <h4 id="car_plate"> </h4>
+      <h4 id="time"> </h4>
+      <h4 id="speed"> </h4>
+      <h4 id="overspeed"> </h4>
+    </div>
 
-  <div id="container"></div>
+    <h1 style="text-align: center;"> Live data of driver's speed status: </h1>
+    <div id="container" style="height: 400px; min-width: 310px"></div>
+    <h2 style="text-align: center;">(Select time period with the time selector)</h2>
 
-  <div>
-    <h2 style="text-align: center;">(Data update every 30 seconds)</h2>
-  </div>
+    <h1 style="text-align: center;" class="mt-3"> Lastest 20 driver's overspeed records: </h1>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Driver ID</th>
+          <th>Car Plate</th>
+          <th>Time</th>
+          <th>Speed (km/h)</th>
+          <th>Overspeed</th>
+        </tr>
+      </thead>
+      <tbody id="liveRecord">
+      </tbody>
+    </table>
 
-  <script type="text/javascript">
 
-    
-    $(function () {
-      // get drivers list
-      $.getJSON('/drivers', function (drivers) {
-        drivers.forEach(function (driver, index) {
-          $('#driverSelect').append($('<option>', {
-            value: driver,
-            text: driver
-          }));
-          if (index === 0) { 
-            $('#driverSelect').val(driver);
-            updateChartData(driver);
+    <script type="text/javascript">
+      $(function () {
+        $.getJSON('/drivers', function (drivers) {
+          drivers.forEach(function (driver, index) {
+            $('#selectDriver').append($('<option>', {
+              value: driver,
+              text: driver
+            }));
+            if (index === 0) {
+              $('#selectDriver').val(driver);
+              updateChartData(driver);
+            }
+          });
+        });
+
+        $('#container').highcharts('StockChart', {
+          chart: { events: { load: function () { } } },
+          title: { text: 'Drivers live data visualization' },
+          xAxis: { type: 'datetime', title: { text: 'Time (UTC+8)' } },
+          yAxis: { title: { text: 'Speed (km/h)' } },
+          series: [{ name: 'Speed', data: [], tooltip: { valueDecimals: 2 } }]
+        });
+
+        $('#selectDriver').change(function () {
+          var driverId = $(this).val();
+          if (driverId) {
+            updateChartData(driverId);
           }
         });
-      });
 
+        function updateChartData(driverId) {
+          var chart = $('#container').highcharts();
+          chart.series[0].setData([]);
+          if (window.chartUpdateInterval) clearInterval(window.chartUpdateInterval);
 
-      // create chart
-      $('#container').highcharts('StockChart', {
-        chart: {
-          events: {
-            load: function () {
-
+          $.getJSON(`/liveData?driver_id=${driverId}`, function (data) {
+            var time = new Date(data[0][3] * 1000);
+            time.setHours(time.getHours() + 8);
+            var speed = parseFloat(data[0][4]);
+            document.getElementById("driver_id").innerText = `Driver ID: ${data[0][1]}`;
+            document.getElementById("car_plate").innerText = `Car Plate: ${data[0][2]}`;
+            time.setHours(time.getHours() - 8);
+            document.getElementById("time").innerText = `Time: ${time}`;
+            document.getElementById("speed").innerText = `Speed: ${speed} km/h`;
+            document.getElementById("overspeed").innerText = `Over Speed: ${data[0][5] ? "Yes" : "No"}`;
+            if (data[0][5]) {
+              document.getElementById("overspeed").style.color = "red";
+            } else {
+              document.getElementById("overspeed").style.color = "black";
             }
-          }
-        },
-        rangeSelector: {
-          enabled: true
-        },
-        title: {
-          text: 'Driver Data Visualization'
-        },
-        xAxis: {
-          type: 'datetime',
-          title: {
-            text: 'Time (UTC+8)'
-          }
-        },
-        yAxis: {
-          title: {
-            text: 'Speed (km/h)'
-          }
-        },
-        series: [{
-          name: 'Speed',
-          data: [],
-          tooltip: {
-            valueDecimals: 2
-          }
-        }]
-      });
 
-      // update chart data when driver is selected
-      $('#driverSelect').change(function () {
-        var driverId = $(this).val();
-        if (driverId) {
-          updateChartData(driverId);
+
+            updateTable(data);
+            data.forEach(function (entry) {
+              var time = new Date(entry[3] * 1000);
+              time.setHours(time.getHours() + 8);
+              var speed = parseFloat(entry[4]);
+              console.log(time.getTime());
+              chart.series[0].addPoint([time.getTime(), speed], true, false);
+            });
+
+            window.chartUpdateInterval = setInterval(function () {
+              $.getJSON(`/liveData?driver_id=${driverId}`, function (newData) {
+                updateTable(newData);
+                newData.forEach(function (newEntry) {
+                  var newTime = new Date(newEntry[3] * 1000);
+                  newTime.setHours(newTime.getHours() + 8);
+                  var newSpeed = parseFloat(newEntry[4]);
+                  chart.series[0].addPoint([newTime.getTime(), newSpeed], true, false);
+                });
+              });
+            }, 30000);
+          });
         }
-      });
 
-      // update chart data
-      function updateChartData(driverId) {
-        var chart = $('#container').highcharts();
-        chart.series[0].setData([]); 
-        if (window.chartUpdateInterval) clearInterval(window.chartUpdateInterval);
-
-        $.getJSON(`/liveData?driver_id=${driverId}`, function (data) {
+        function updateTable(data) {
           var time = new Date(data[0][3] * 1000);
           time.setHours(time.getHours() + 8);
           var speed = parseFloat(data[0][4]);
-          chart.series[0].addPoint([time.getTime(), speed], true, false);
-
           document.getElementById("driver_id").innerText = `Driver ID: ${data[0][1]}`;
           document.getElementById("car_plate").innerText = `Car Plate: ${data[0][2]}`;
-
           time.setHours(time.getHours() - 8);
-
           document.getElementById("time").innerText = `Time: ${time}`;
           document.getElementById("speed").innerText = `Speed: ${speed} km/h`;
           document.getElementById("overspeed").innerText = `Over Speed: ${data[0][5] ? "Yes" : "No"}`;
@@ -134,30 +145,37 @@
             document.getElementById("overspeed").style.color = "black";
           }
 
-          window.chartUpdateInterval = setInterval(function () {
-            $.getJSON(`/liveData?driver_id=${driverId}`, function (newData) {
-              var newTime = new Date(newData[0][3] * 1000);
-              newTime.setHours(newTime.getHours() + 8);
-              var newSpeed = parseFloat(newData[0][4]);
-              chart.series[0].addPoint([newTime.getTime(), newSpeed], true, false);
-              document.getElementById("driver_id").innerText = `Driver ID: ${newData[0][1]}`;
-              document.getElementById("car_plate").innerText = `Car Plate: ${newData[0][2]}`;
-              document.getElementById("time").innerText = `Time: ${newTime}`;
-              document.getElementById("speed").innerText = `Speed: ${newSpeed} km/h`;
-              document.getElementById("overspeed").innerText = `Over Speed: ${newData[0][5] ? "Yes" : "No"}`;
+          var table = $('#liveRecord');
+          table.empty();
 
-              if (newData[0][5]) {
-                document.getElementById("overspeed").style.color = "red";
-              } else {
-                document.getElementById("overspeed").style.color = "black";
-              }
+          // filter for overspeed records 
+          var overspeedRecords = data.filter(function (entry) {
+            return entry[5];
+          });
 
-            });
-          }, 30000);
-        });
-      }
-    });
-  </script>
+          // sort records
+          overspeedRecords.sort(function (a, b) {
+            return b[3] - a[3];
+          });
+
+          var latest20Records = overspeedRecords.slice(0, 20);
+
+          latest20Records.forEach(function (entry) {
+            var time = new Date(entry[3] * 1000);
+            var row = `<tr>
+              <td>${entry[1]}</td>
+              <td>${entry[2]}</td>
+              <td>${time.toLocaleString()}</td>
+              <td>${parseFloat(entry[4]).toFixed(2)} km/h</td>
+              <td style="color: red;">Yes</td>
+            </tr>`;
+            table.append(row);
+          });
+        }
+      });
+    </script>
+  </div>
+
 </body>
 
 </html>
