--- a/templates/liveView.html
+++ b/templates/liveView.html
@@ -18,7 +18,14 @@
 <body class="">
   <div class="container-fluid bg-light text-dark p-3">
     <header>
-      <a href="/index">Home</a>
+      <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/liveView">live data</a>
+        </li>
+      </ul>
       <h1 style="text-align: center;">Real-time Speed Monitoring</h1>
       <label for="selectDriver" class="form-label">Select a Driver:</label>
       <select id="selectDriver" class="form-select">
