--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,124 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>flask</title>
-  </head>
-  <body>
-    <h1>hello world</h1>
-  </body>
+<html>
+<head>
+    <title>driving report  </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</head>
+<body>
+  <ul class="nav justify-content-end">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="/">home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="/liveView">live data</a>
+    </li>
+  </ul>
+    <h1>Report with driver</h1>
+
+    <form id="apiForm" class="mx-5">
+        <label for="driverIdSelect" class="form-label">Select driver id</label>
+        <select class="form-select" id="driverIdSelect">
+           
+        </select>
+        <br>
+        <br>
+
+          <label for="dateSelect" class="form-label">Select date</label>
+          <select class="form-select" id="dateSelect">
+
+   
+  
+        </select>
+        <br>
+        <button type="submit" class="btn btn-primary">Get data</button>
+
+    </form>
+    <h2 id="driver_id">Driver id :</h2>
+    <h2 id="CarPlateNumber">Driver name :</h2>
+    <p id="table_hins">plesae select driver id</p>
+    <table class="table " id="dataTable">
+        
+
+    </table>
+
+    <script>
+    $(document).ready(function(){
+
+        $.getJSON("/api/ids", function(data){
+            $.each(data, function(index, value){
+                $("#driverIdSelect").append("<option value='" + value.driver_id + "'>" + value.driver_id + "</option>");
+            });
+        });
+
+      if($("#dateSelect").val() == null){
+        $("#dateSelectGroup").hide();
+        }
+
+        $("#driverIdSelect").change(function() {
+
+          $("#dateSelect").empty();
+          $("#dateSelectGroup").hide();
+        });
+$("#apiForm").submit(function(e){
+    e.preventDefault();
+    var selectedDriverId = $("#driverIdSelect").val();
+    var selectedDate = $("#dateSelect").val();
+    url = "/api/records/" + selectedDriverId ;
+    if(selectedDate != null){
+        url += "/" + selectedDate;
+    }
+    $.getJSON(url, function(data){
+        $("#dataTable").empty();
+      var keys = [ "Date", "Hour", "Over Speed count ", "Fatigue driving count ", "Over speed time ", "Netural Slide Time"];
+        $("#driver_id").text("Driver id : " + data[0].driver_id);
+        $("#CarPlateNumber").text("Driver name : " + data[0].CarPlateNumber);
+
+        var header = "<thead><tr>";
+
+        $.each(keys, function(index, key){
+            header += "<th scope='col'>" + key + "</th>";
+        });
+        header += "</tr></thead>  <tbody>";
+        var keys = [ "Date", "Hour", "CountOfOverSpeed", "CountOfFatigueDriving", "TotalOfOverSpeedTime", "TotalNeturalSlideTime"];
+
+        $("#dataTable").append(header);
+        $("#table_hins").hide("");
+        $.each(data, function(index, row){
+            var rowHtml = "<tr>";
+            $.each(keys, function(index, key){
+                rowHtml += "<td>" + row[key] + "</td>";
+            });
+            rowHtml += "</tr>";
+            $("#dataTable").append(rowHtml);
+        });
+
+        //for the date select
+       
+        //data distinct date
+        var dates = [];
+        
+        $.each(data, function(index, row){
+            if(dates.indexOf(row.Date) == -1){
+                dates.push(row.Date);
+            }
+        });
+        if($("#dateSelect option").length == 0){
+        $.each(dates, function(index, date){
+            $("#dateSelect").append("<option value='" + date + "'>" + date + "</option>");
+            $("#dateSelect").show();
+
+        }
+        
+  
+        );
+        }
+    });
+});
+});
+
+  
+    </script>
+</body>
 </html>
