--- a/templates/liveView.html
+++ b/templates/liveView.html
@@ -20,10 +20,10 @@
     <header>
       <ul class="nav justify-content-end">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/liveView">live data</a>
+          <a class="nav-link active" aria-current="page" href="/liveView">Live data</a>
         </li>
       </ul>
       <h1 style="text-align: center;">Real-time Speed Monitoring</h1>
