--- a/templates/liveView.html
+++ b/templates/liveView.html
@@ -108,7 +108,7 @@
             time.setHours(time.getHours() - 8);
             document.getElementById("time").innerText = `Time: ${time}`;
             document.getElementById("speed").innerText = `Speed: ${speed} km/h`;
-            document.getElementById("overspeed").innerText = `Overspeed: ${data[0][5] ? "Yes" : "No"}`;
+            document.getElementById("overspeed").innerText = `Overspeed: ${data[0][5] ? "Yes, please drive slower!" : "No"}`;
             if (data[0][5]) {
               document.getElementById("overspeed").style.color = "red";
             } else {
@@ -153,7 +153,7 @@
           time.setHours(time.getHours() - 8);
           document.getElementById("time").innerText = `Time: ${time}`;
           document.getElementById("speed").innerText = `Speed: ${speed} km/h`;
-          document.getElementById("overspeed").innerText = `Overspeed: ${data[0][5] ? "Yes" : "No"}`;
+          document.getElementById("overspeed").innerText = `Overspeed: ${data[0][5] ? "Yes, please drive slower!" : "No"}`;
           if (data[0][5]) {
             document.getElementById("overspeed").style.color = "red";
           } else {
@@ -182,7 +182,7 @@
               <td>${entry[2]}</td>
               <td>${time.toLocaleString()}</td>
               <td>${parseFloat(entry[4]).toFixed(2)} km/h</td>
-              <td style="color: red;">Yes</td>
+              <td style="color: red;">Yes, please drive slower!</td>
             </tr>`;
             table.append(row);
           });
