--- a/templates/liveView.html
+++ b/templates/liveView.html
@@ -45,7 +45,7 @@
     <div id="container" style="height: 400px; min-width: 310px"></div>
     <h2 style="text-align: center;">(Select time period with the time selector)</h2>
 
-    <h1 style="text-align: center;" class="mt-3"> Lastest 20 driver's overspeed records: </h1>
+    <h1 style="text-align: center;" class="mt-3"> Recent overspeed record of driver: </h1>
     <table class="table table-striped">
       <thead>
         <tr>
